# tdx-method-lab

./: .gitignore  README.md  paper_task.cmd  pyproject.toml
data/: paper_strategy.json
docs/: deepresearch-tdx-quant-system.md  preregistration-2026-10.md  tdx-mac-formula-check-2026-07-05.md  tdxquant-mcp-readiness.md
formulas/: main_chart.tdx  sub_chart.tdx  water_depth.tdx
reports/: band_swing.csv  gate_grid_registry.json  gate_stage2_verdict.json  gate_sweep_grid.csv  gate_sweep_registry.json  paper_log.csv  pool_conditioned.csv  rescue2_conjunctions.csv  rescue_exits_test.csv  slot_portfolio.csv  slot_portfolio_random_dist.json  tdx-signal-observation-2026-07-05.md  unified_gate_final_verdict.md  v1_ai_basket_index.csv  v1_backtest_summary.csv  v1_backtest_summary.md  v1_backtest_trades.csv  v1_bull_bias_by_regime.csv  v1_bull_bias_by_segment.csv  v1_bull_bias_by_window.csv  v1_bull_bias_by_window_stock.csv  v1_bull_bias_overall.csv  v1_bull_market_bias.md  v1_combo_exit_stability.csv  v1_combo_exit_summary.csv  v1_combo_exit_tests.md  v1_confirm_validation_by_stock.csv  v1_confirm_validation_summary.csv  v1_confirm_visual_exit.md  v1_controls_by_stock.csv  v1_controls_summary.csv  v1_controls_tuning.md  v1_current_action_list.csv  v1_market_regime_by_regime.csv  v1_market_regime_by_segment.csv  v1_market_regime_by_window_stock.csv  v1_market_regime_filters.md  v1_market_regime_overall.csv  v1_operational_policy_by_window_stock.csv  v1_operational_policy_summary.csv  (+21 more)
scripts/: backtest_trade_method.py  band_swing.py  build_operational_system.py  gate_sweep.py  (+18 more)
(+17 files in other folders)
